--- a/backend/loginapp/src/main/resources/application.properties
+++ b/backend/loginapp/src/main/resources/application.properties
@@ -1,8 +1,16 @@
+
+#telling the server hoe to handle errors
+#showing the error message
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+
+#connecting to postgress
 spring.application.name=loginapp
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/FindFixer
 spring.datasource.username=postgres
-spring.datasource.password=mkannatafthas
+spring.datasource.password=mkanna
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
