--- a/backend/loginapp/src/main/resources/application.properties
+++ b/backend/loginapp/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/FindFixer
 spring.datasource.username=postgres
 spring.datasource.password=mkanna
 
+#how to talk with database[ translate to database speak ]
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
